# tree-sitter-ocamllex

./: .gitattributes  .gitignore  .npmignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  index.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: build.yml  ci.yml  fuzz.yml  publish.yml
bindings/c/: tree-sitter-ocamllex.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_ocamllex/: __init__.py  binding.c
bindings/rust/: README.md  lib.rs
bindings/swift/TreeSitterOcamllex/: ocamllex.h
bindings/swift/TreeSitterOcamllexTests/: TreeSitterOcamllexTests.swift
corpus/: actions.txt  regular-expressions.txt
queries/: highlights.scm
src/: binding.cc  grammar.json  node-types.json  parser.c  scanner.c  scanner.cc
test/corpus/: actions.txt  lexer-entries.txt  refill-handlers.txt  regular-expressions.txt
