[package]
name = "tree-sitter-ocamllex"
description = "OCamllex grammar for the tree-sitter parsing library"
version = "0.20.1"
authors = ["Pieter Goetschalckx"]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "ocamllex"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/314eter/tree-sitter-ocamllex"
edition = "2018"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.20"

[build-dependencies]
cc = "1.0"
